--- a/resources/css/pharmastyle.css
+++ b/resources/css/pharmastyle.css
@@ -1,13 +1,20 @@
-.mapouter{
-    position:relative;
-    text-align:right;
-    height:500px;
-    width:600px;
-  }
-  
-.gmap_canvas {
-  overflow:hidden;
-  background:none!important;
-  height:500px;
-  width:600px;
+a{
+  text-decoration: none;
+}
+
+.online{
+  display: inline-flex;
+  text-align: justify;
+  width: 100px;
+}
+
+img{
+  display: block;
+  margin: 0 auto;
+  float: left;
+}
+
+.map{
+  float: left;
+  width: 50%;
 }
