--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -93,7 +93,7 @@
                     firebase.auth().onAuthStateChanged(function(user)
                     {
                     if(!user) {
-                        window.location.href = 'portal.html';
+                        window.location.href = '../templates/portal.html';
                     }
                     });
         </script>
