--- a/templates/forgetPassword.html
+++ b/templates/forgetPassword.html
@@ -11,17 +11,17 @@
    
         
     <!-- MATERIAL DESIGN ICONIC FONT -->
-    <link rel="stylesheet" href="design_files/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="../static/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
             
     <!-- STYLE CSS -->
-    <link rel="stylesheet" href="design_files/css/style.css">
+    <link rel="stylesheet" href="../static/css/style_por.css">
 
 </head>
 <body>
-    <div class="wrapper" style="background-image: url('resources/img/portal_background.jpg')">
+    <div class="wrapper" style="background-image: url('../static/img/portal_background.jpg')">
         <div class="inner">
             <div class="image-holder">
-                <img src="resources/img/forget_left.jpg">
+                <img src="../static/img/forget_left.jpg">
             </div>
 
             <form action="">
@@ -80,7 +80,7 @@
         firebase.auth().onAuthStateChanged(function(user)
         {
         if(user) {
-            window.location.href = 'dashboard.html';
+            window.location.href = '../templates/dashboard.html';
         }
         });
       </script>
