--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ body{
     background-size: cover;
 }
 .container{
-    width: 1300px;
+    width: 1500px;
     height: auto;
     align-items: center;
     justify-content: center;
@@ -23,7 +23,7 @@ body{
 .container .box{
     background: #fff;
     position: relative;
-    padding: 30px 40px 50px;
+    padding: 30px 50px 50px 50px;
     margin: 200px 0px 0px;
     text-align: center;
     overflow: hidden;
