--- a/templates/pharmacy.html
+++ b/templates/pharmacy.html
@@ -3,14 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="resources/css/pharmastyle.css">
-    <title>Pharmacy locations</title>
+    <link rel="stylesheet" href="../static/css/pharmastyle.css">
+    <title>Pharmacy</title>
 </head>
 
 <body>
+<header id="header">
+        <h1 class="title" style="align-items: center; color: white;">SWASTH AIO</h1>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+        </ul>
+</header>
+<div class="wrapper">
+    <div class="header">
+      <div class="title">
+        Finding medicines?
+      </div>
+    </div>   
     <div class="row">
-        <div class="column" style="background-color: #aaa;height: 620px; width:50%">
+        <div class="column" style="background-color: white;height: 620px; width:50%; display:flex; flex-direction: column; align-items: center;">
             <h2 style="padding: 10px;">Stores Nearby:</h2>
             <div class="map" style="width: 50%; float:left;">
                 <div class="gmap">
@@ -20,7 +31,7 @@
                 </div>
             </div>
         </div>
-        <div class="column" style="background-color: #bbb; height: 620px; width:50%">
+        <div class="column" style="background-color: white; height: 620px; width:50%; display:flex; flex-direction: column; align-items: center;">
                 <h2 style="padding: 10px;">Online Stores:</h2>
                 <!--<div class="images">
             <a href="https://www.1mg.com/" target="_blank"><p>1mg</p></a><img src="resources/images/1mg.png" height="100" width="100">
@@ -33,20 +44,20 @@
         </div>-->
                 <table style= "padding: 0px 100px;">
                     <tr>
+                        <td><a href="https://www.netmeds.com/" target="_blank">Netmeds</a></td>
+                        <td><a href="https://www.netmeds.com/" target="_blank"><img src="../static/img/Netmeds.png" height="80" width="130"></a></td>
+                    </tr>
+                    <tr>
                         <td><a href="https://www.1mg.com/" target="_blank">1mg</a></td>
-                        <td><a href="https://www.1mg.com/" target="_blank"><img src="resources/images/1mg.png" height="100" width="100"></a></td>
+                        <td><a href="https://www.1mg.com/" target="_blank"><img src="../static/img/1mg.png" height="80" width="90"></a></td>
                     </tr>
                     <tr>
                         <td><a href="https://www.medlife.com/" target="_blank">Medlife</a></td>
-                        <td><a href="https://www.medlife.com/" target="_blank"><img src="resources/images/Medlife.png" height="100" width="100"></a></td>
+                        <td><a href="https://www.medlife.com/" target="_blank"><img src="../static/img/Medlife.png" height="100" width="150"></a></td>
                     </tr>
                     <tr>
                         <td><a href="https://pharmeasy.in/" target="_blank">Pharmeasy</a></td>
-                        <td><a href="https://pharmeasy.in/" target="_blank"><img src="resources/images/Pharmeasy.png" height="100" width="100"></a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="https://www.netmeds.com/" target="_blank">Netmeds</a></td>
-                        <td><a href="https://www.netmeds.com/" target="_blank"><img src="resources/images/Netmeds.png" height="100" width="100"></a></td>
+                        <td><a href="https://pharmeasy.in/" target="_blank"><img src="../static/img/Pharmeasy.png" height="100" width="100"></a></td>
                     </tr>
                 </table>
             </div>
