--- a/templates/pharmacy.html
+++ b/templates/pharmacy.html
@@ -10,16 +10,17 @@
 <body>
 <header id="header">
         <h1 class="title" style="align-items: center; color: white;">SWASTH AIO</h1>
+        <h1 id="Heading">Finding medicines?</h1>
         <ul>
             <li><a href="../index.html">Home</a></li>
         </ul>
+        
 </header>
 <div class="wrapper">
     <div class="header">
       <div class="title">
-        Finding medicines?
       </div>
-    </div>   
+    </div>
     <div class="row">
         <div class="column" style="background-color: white;height: 620px; width:50%; display:flex; flex-direction: column; align-items: center;">
             <h2 style="padding: 10px;">Stores Nearby:</h2>
