Addded Web Icon

--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Doctors</title>
-	<link rel="stylesheet" href="../static/css/styled.css">
+  <link rel="stylesheet" href="../static/css/styled.css">
+  <link rel="icon" href="../static/icons/favicon-32x32.png">
+
 </head>
 
 <body>
