--- a/templates/pharmacy.html
+++ b/templates/pharmacy.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/css/pharmastyle.css">
+    <link rel="icon" href="../static/icons/favicon-32x32.png">
     <title>Pharmacy</title>
 </head>
 
