--- a/templates/profileSettings.html
+++ b/templates/profileSettings.html
@@ -4,6 +4,9 @@
 <head>
     <title>Profile Settings</title>
 
+
+    <link rel="icon" href="../static/icons/favicon-32x32.png">
+
      <!-- BOOTSTRAP & JQUERY -->   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
