--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>My Portal</title>
+    
+    <link rel="icon" href="../static/icons/favicon-32x32.png">
 
      <!-- BOOTSTRAP & JQUERY -->   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
