--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,103 +1,455 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>Dashboard</title>
-        
-        <link rel="icon" href="../static/icons/favicon-32x32.png">
 
-        <!-- BOOTSTRAP & JQUERY -->   
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
-       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<head>
+	<title>Dashboard</title>
 
-    </head>
-    <body class="h-100">
-        <nav class="navbar navbar-expand-lg bg-dark text-white">
-           <div class="container-fluid">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a class="navbar-brand" style="color: whitesmoke; text-decoration-style: wavy;" href="#">
-                        <span style="color: white;">Swasth AI</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="nav-link" style="color: whitesmoke; text-decoration-style: wavy;" href="#">
-                        <span style="color: white;">Home</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="nav-link" style="color: whitesmoke; text-decoration-style: wavy;" href="#">
-                        <span style="color: white;">My Profile</span>
-                    </a>
-                </li>        
-            </ul>
-            <div class="dropdown navbar-right">
-                <button
-                id="option-id" 
-                class="btn btn-light dropdown-toggle bg-dark text-white" 
-                type="button" 
-                data-toggle="dropdown" 
-                aria-haspopup="true"
-                aria-expanded="false"
-                >
-                    Options
-                </button>
-                <div
-                   class="dropdown-menu"
-                   aria-labelledby="option-id"
-                >
-                <a class="dropdown-item" id="btn-logout" href="#">
-                    Logout
-                </a>
-                </div>
-            </div>
-           </div> 
-        </nav>
-        <div class="row h-100 bg-light">
-            <div class="col-lg-0 bg-secondary">
-                <ul class="nav flex-column">
+	<meta name="viewport"
+		content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+		<link rel="icon" href="../static/icons/favicon-32x32.png">
 
-                </ul>
-            </div>
-            <div class="col-lg-12">
-                <div class="container" id="container">
+	<!-- Import lib -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css">
+	<link rel="stylesheet" type="text/css" href="../static/fontawesome-free/css/all.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<!-- End import lib -->
 
-                </div>
-            </div>
-        </div>
-    </body>
-                <!-- FIREBASE -->
-                <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
-                <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
-                <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
-                <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-storage.js"></script>
-                <script>
-                    // Your web app's Firebase configuration
-                    var firebaseConfig = {
-                      apiKey: "AIzaSyAfkFk5yr_SBWm99EB2b3A7oAq5gAOTprY",
-                      authDomain: "swasthai-9e4a8.firebaseapp.com",
-                      databaseURL: "https://swasthai-9e4a8.firebaseio.com",
-                      projectId: "swasthai-9e4a8",
-                      storageBucket: "swasthai-9e4a8.appspot.com",
-                      messagingSenderId: "164428875159",
-                      appId: "1:164428875159:web:c9349dd2a60458aa1df0d2"
-                    };
-                    // Initialize Firebase
-                    firebase.initializeApp(firebaseConfig);
+	<link rel="stylesheet" type="text/css" href="../static/css/styledash.css">
+</head>
 
-                    var logout=document.getElementById("btn-logout")
+<body class="overlay-scrollbar">
+	<!-- navbar -->
+	<div class="navbar">
+		<!-- nav left -->
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link">
+					<i class="fas fa-bars" onclick="collapseSidebar()"></i>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="../index.html">
+				<img src="../static/icons/favicon-32x32.png" alt="Icon" class="logo logo-light">
+				<img src="../static/icons/favicon-32x32.png" alt="Icon" class="logo logo-dark"></a>
+			</li>
+		</ul>
+		<!-- end nav left -->
+		<!-- form -->
+		<form class="navbar-search">
+			<input type="text" name="Search" class="navbar-search-input" placeholder="What you looking for...">
+			<i class="fas fa-search"></i>
+		</form>
+		<!-- end form -->
+		<!-- nav right -->
+		<ul class="navbar-nav nav-right">
+			<li class="nav-item mode">
+				<a class="nav-link" href="#" onclick="switchTheme()">
+					<i class="fas fa-moon dark-icon"></i>
+					<i class="fas fa-sun light-icon"></i>
+				</a>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link">
+					<i class="fas fa-bell dropdown-toggle" data-toggle="notification-menu"></i>
+					<span class="navbar-badge">15</span>
+				</a>
+				<ul id="notification-menu" class="dropdown-menu notification-menu">
+					<div class="dropdown-menu-header">
+						<span>
+							Notifications
+						</span>
+					</div>
+					<div class="dropdown-menu-content overlay-scrollbar scrollbar-hover">
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-gift"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-tasks"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-gift"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-tasks"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-gift"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-tasks"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-gift"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-tasks"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-gift"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-tasks"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-gift"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-tasks"></i>
+								</div>
+								<span>
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+									<br>
+									<span>
+										15/07/2020
+									</span>
+								</span>
+							</a>
+						</li>
+					</div>
+					<div class="dropdown-menu-footer">
+						<span>
+							View all notifications
+						</span>
+					</div>
+				</ul>
+			</li>
+			<li class="nav-item avt-wrapper">
+				<div class="avt dropdown">
+					<img src="../static/img/Aagam.jpeg" alt="User image" class="dropdown-toggle" data-toggle="user-menu">
+					<ul id="user-menu" class="dropdown-menu">
+						<li class="dropdown-menu-item">
+							<a class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-user-tie"></i>
+								</div>
+								<span>Profile</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="fas fa-cog"></i>
+								</div>
+								<span>Settings</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link">
+								<div>
+									<i class="far fa-credit-card"></i>
+								</div>
+								<span>Payments</span>
+							</a>
+						</li>
+						<li class="dropdown-menu-item">
+							<a href="#" class="dropdown-menu-link" id="btn-logout">
+								<div>
+									<i class="fas fa-sign-out-alt"></i>
+								</div>
+								<span>Logout</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+		<!-- end nav right -->
+	</div>
+	<!-- end navbar -->
+	<!-- sidebar -->
+	<div class="sidebar">
+		<ul class="sidebar-nav">
+			<li class="sidebar-nav-item">
+				<a href="#" class="sidebar-nav-link">
+					<div>
+						<i class="fas fa-tachometer-alt"></i>
+					</div>
+					<span>
+						Dashboard
+					</span>
+				</a>
+			</li>
+			<li class="sidebar-nav-item">
+				<a href="#" class="sidebar-nav-link">
+					<div>
+						<i class="fas fa-tasks"></i>
+					</div>
+					<span>Records</span>
+				</a>
+			</li>
+			<li class="sidebar-nav-item">
+				<a href="#" class="sidebar-nav-link">
+					<div>
+						<i class="fas fa-spinner"></i>
+					</div>
+					<span>Upcoming</span>
+				</a>
+			</li>
+			<li class="sidebar-nav-item">
+				<a href="#" class="sidebar-nav-link">
+					<div>
+						<i class="fas fa-check-circle"></i>
+					</div>
+					<span>Completed</span>
+				</a>
+			</li>			
+		</ul>
+	</div>
+	<!-- end sidebar -->
+	<!-- main content -->
+	<div class="wrapper">
+		<div class="row">
+			<div class="col-3 col-m-6 col-sm-6">
+				<div class="counter bg-primary">
+					<p>
+						<i class="fas fa-tasks"></i>
+					</p>
+					<h3>10</h3>
+					<p>Records</p>
+				</div>
+			</div>
+			<div class="col-3 col-m-6 col-sm-6">
+				<div class="counter bg-warning">
+					<p>
+						<i class="fas fa-spinner"></i>
+					</p>
+					<h3>1</h3>
+					<p>Upcoming</p>
+				</div>
+			</div>
+			<div class="col-3 col-m-6 col-sm-6">
+				<div class="counter bg-success">
+					<p>
+						<i class="fas fa-check-circle"></i>
+					</p>
+					<h3>2</h3>
+					<p>Completed</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-8 col-m-12 col-sm-12">
+				<div class="card">
+					<div class="card-header">
+						<h3>
+							Doctor Appointments
+						</h3>
+						<i class="fas fa-ellipsis-h"></i>
+					</div>
+					<div class="card-content">
+						<table>
+							<thead>
+								<tr>
+									<th>#</th>
+									<th>Doctor</th>
+									<th>Specialist</th>
+									<th>Status</th>
+									<th>Date</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>Dr.Vijay Aggarwal</td>
+									<td>ENT</td>
+									<td>
+										<span class="dot">
+											<i class="bg-warning"></i>
+											Upcoming
+										</span>
+									</td>
+									<td>10/09/2020</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>Dr.Amrita Gogia</td>
+									<td>Dentist</td>
+									<td>
+										<span class="dot">
+											<i class="bg-success"></i>
+											Completed
+										</span>
+									</td>
+									<td>02/09/2020</td>
+								</tr>
+								<tr>
+									<td>3</td>
+									<td>Dr.Murali Prasad Sharma</td>
+									<td>Everything</td>
+									<td>
+										<span class="dot">
+											<i class="bg-success"></i>
+											Completed
+										</span>
+									</td>
+									<td>06/09/2020</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end main content -->
+	<!-- import script -->
+	<script src="../static/js/index.js"></script>
+	<!-- end import script -->
+	<!-- FIREBASE -->
+	<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-storage.js"></script>
+	<script>
+		// Your web app's Firebase configuration
+		var firebaseConfig = {
+		  apiKey: "AIzaSyAfkFk5yr_SBWm99EB2b3A7oAq5gAOTprY",
+		  authDomain: "swasthai-9e4a8.firebaseapp.com",
+		  databaseURL: "https://swasthai-9e4a8.firebaseio.com",
+		  projectId: "swasthai-9e4a8",
+		  storageBucket: "swasthai-9e4a8.appspot.com",
+		  messagingSenderId: "164428875159",
+		  appId: "1:164428875159:web:c9349dd2a60458aa1df0d2"
+		};
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
 
-                    logout.onclick=function() {
-                        firebase.auth().signOut();
-                    }
-        
-                    firebase.auth().onAuthStateChanged(function(user)
-                    {
-                    if(!user) {
-                        window.location.href = '../templates/portal.html';
-                    }
-                    });
-        </script>
-    </body>
+		var logout=document.getElementById("btn-logout")
+
+		logout.onclick=function() {
+			firebase.auth().signOut();
+		}
+
+		firebase.auth().onAuthStateChanged(function(user)
+		{
+		if(!user) {
+			window.location.href = '../templates/portal.html';
+		}
+		});
+</script>
+</body>
+
 </html>
