--- a/static/css/styled.css
+++ b/static/css/styled.css
@@ -9,8 +9,11 @@
 }
 
 body {
-  background: #eaeaea;
+  background: #ccc;
+  line-height: 1.25;
 }
+
+/*---------------------------------------- HEADER -----------------------------------------------------*/
 
 header{
   position: fixed;
@@ -22,6 +25,7 @@ header{
   align-items: center;
   z-index: 1;
   font-family: Roboto;
+  background: #0099ff;
   }
   
   header ul{
@@ -51,23 +55,20 @@ header{
     color: red;
     }
 
-.wrapper .header {
-  background: #0099ff;
+h1{
+  color: white;
 }
 
-.wrapper .title {
-  padding: 50px 0;
-  text-align: center;
-  font-weight: 700;
-  font-size: 32px;
-  color: #fff;
+/*------------------------------------------ SEARCH BOX -------------------------------------------------*/
+
+.wrapper{
+  background: #0099ff;
 }
 
 .wrapper .search_box {
-  max-width: 1000px;
-  background: #0099ff;
-  margin: 0 auto;
-  padding: 25px 0 50px;
+  max-width: 100%;
+  margin: 0 100px;
+  padding: 25px 0 70px;
   border-radius: 3px;
 }
 
@@ -90,92 +91,116 @@ header{
   border-bottom: 2px solid #fff;
 }
 
-.table_wrap {
-  width: 1300px;
-  margin: 50px auto 0;
-}
+/*--------------------------------------------- TABLE ---------------------------------------------------*/
 
-.table_wrap ul li .item {
-  display: flex;
-  align-items: center;
-  background: #fff;
-  padding: 15px 0;
-  height: 50px;
-}
-
-.table_wrap ul li .item .name {
-  width: 30%;
-  padding: 0 15px;
-}
-
-.table_wrap ul li .item .phone,
-.table_wrap ul li .item .exp {
-  width: 20%;
-  padding: 0 15px;
-}
-
-.table_wrap ul li .item .status {
-  width: 15%;
-  padding: 0 15px;
-}
-
-.table_wrap ul li .item .issue {
-  width: 20%;
-  padding: 0 15px;
-}
-
-.table_wrap ul li .item .video {
-  width: 20%;
+table {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
   margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
+}
+
+table tr {
+  background-color: #fff;
+  border: 1px solid #fff;
+  padding: .35em;
+}
+
+table th,
+table td {
+  padding: .625em;
   text-align: center;
 }
 
-.table_wrap ul li .item .issue span,
-.table_wrap ul li .item .name span {
-  width: 90%;
-  display: inline-block;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+table th {
+  font-size: 18px;
+  letter-spacing: .1em;
+  text-transform: uppercase;
 }
 
-.table_header ul li .item {
-  border-bottom: 2px solid #eaeaea;
-  font-weight: 600;
+table td{
+  font-size: 16px; 
 }
 
-.table_body {
-  height: 300px;
-  overflow: auto;
+.hold {
+    background: #fff0db;
+    color: #f59d39;
+    padding: 15px 50px;
 }
 
-.table_body ul li .item {
-  border-bottom: 1px solid #efefef;
-}
-
-.table_body ul li .item .status span {
-  padding: 5px 11px;
-  border-radius: 25px;
-  max-width: 150px;
-  display: inline-block;
-}
-
-.table_body ul li .item .open {
+.open {
   background: #e5edfa;
   color: #5a8ee4;
+  padding: 15px 50px;
 }
 
-.table_body ul li .item .closed {
+.closed {
   background: #fedfe5;
   color: #ff89a0;
+  padding: 15px 50px;
 }
 
-.table_body ul li .item .hold {
-  background: #fff0db;
-  color: #f59d39;
+img{
+  cursor: pointer;
 }
 
-.table_body ul li .item .canceled {
-  background: #ffdbd6;
-  color: #e87060;
+/*------------------------------------------ MEDIA QUERY ----------------------------------------------*/
+
+@media screen and (max-width: 769px) {
+  table {
+    border: 0;
+  }
+  table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+  
+  table tr {
+    border-bottom: 3px solid #ddd;
+    display: block;
+    margin-bottom: .625em;
+  }
+  
+  table td {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: .8em;
+    text-align: right;
+  }
+  
+  table td::before {
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  table td:last-child {
+    border-bottom: 0;
+  }
+  header{
+    padding: 0 20px;
+    height: 65px;
+    font-size: 18px;
+  }
+  h1{
+    font-size: 18px;
+  }
+  .wrapper .search_box {
+    padding: 100px 0 70px;
+  }
+}
+
+@media screen and (max-width: 1400px){
+  .wrapper .search_box {
+    padding: 100px 0 30px;
+  }
 }
