--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,63 +1,46 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-@import url(https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap);
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap"); 
+
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 
 body{
     margin: 0px;
     padding: 0px;
     background: url(../img/DR.jpg);
-    background-size: cover;
-}
-
-.container{
-    width: 100%;
-    height: auto;
-    align-items: center;
+    background-size: contain;
+    background-repeat: no-repeat;    
     justify-content: center;
-    display: grid;
-    padding: 0px 50px;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    grid-gap: 25px;
-    box-sizing:border-box;
-}
-.container .box{
-    background: #fff;
-    position: relative;
-    padding: 30px 50px 50px 50px;
-    margin: 200px 0px 0px;
-    text-align: center;
-    overflow: hidden;
-    border-radius: 20px;
-    cursor: pointer;
-    transform: scale(1);
-    transition: transform 0.5s;
+    align-items: center;
 }
 
-.container .box:nth-child(1){
-    background: linear-gradient(45deg,rgb(3, 110, 183,0.8),rgb(100, 234, 255,0.8));
-}
-.container .box:nth-child(2){
-    background: linear-gradient(45deg,rgb(3, 110, 183,0.8),rgba(100, 234, 255, 0.8));
-}
-.container .box:nth-child(3){
-    background: linear-gradient(45deg,rgb(3, 110, 183,0.8),rgb(100, 234, 255,0.8));
-}
-.container .box:nth-child(4){
-    background: linear-gradient(45deg,rgb(3, 110, 183,0.8),rgb(100, 234, 255,0.8));
+a{
+  text-decoration: none;
 }
 
-*{
-margin: 0px;
-padding: 0px;
-box-sizing: border-box;
-scroll-behavior: smooth;
+section{
+  align-items: center;
+  display: block;
+  min-height: 100vh;
 }
+
+.title{
+  align-items: center;
+  color: white;
+}
+
+/*------------------------------------------- HEADER ----------------------------------------------*/
 
 header{
 position: fixed;
 width: 100%;
 height: 75px;
-padding: 0px 100px;
+padding: 0px 5%;
 display: flex;
 justify-content: space-between;
 align-items: center;
@@ -92,40 +75,86 @@ border-bottom: 3px solid red;
 color: red;
 }
 
-.box::after{
-      content: '';
-      display: block;
-      width:0px;
-      height: 2px;
-      background: #000;
-      transition: width .3s ease;
-}
-
-.box:hover::after{
-    width: 100%;
-    transition: width .3s;
-}
-
-a{
-    text-decoration: none;
-}
+/*------------------------------------------- WAVE ----------------------------------------------*/
 
 .wave{
-    position: absolute;
-    left:0;
-    right:0;
-    z-index: -1;
+  position: absolute;
+  left:0;
+  right:0;
+  z-index: -1;
 }
 
-.box:hover{
-    transform: scale(0.8);
+/*--------------------------------------------- ICONS --------------------------------------------------*/
+
+#front .front {
+  padding: 4rem 0;
 }
 
-section{
-    align-items: center;
-    display: flex;
-    min-height: 100vh;
-  }
+#front .front .front-img {
+  padding: 1rem;
+}
+
+#front .front .front-img img {
+  width: 100%;
+  margin-right: -10%;
+}
+
+#front .front .front-text {
+  position: relative;
+}
+
+#front .front-showcase {
+  width: 100%;
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  position: relative;
+  z-index: 0;
+  margin-top: 15rem;
+}
+
+#front .front-showcase .front-icon {
+  padding: 1.5rem;
+  text-align: center;
+  border-radius: 20px;
+  background: linear-gradient(45deg,rgb(3, 110, 183,0.8),rgb(100, 234, 255,0.8));
+  height: 100%;
+  cursor: pointer;
+}
+
+#front .front-showcase .front-icon h2 {
+  margin: 0.5rem 0;
+  color: #000000;
+}
+
+.front-icon{
+  transform: scale(1);
+  transition: transform 0.5s;
+  overflow: hidden;
+}
+
+.front-icon:hover{
+  transform: scale(0.8);
+}
+
+.front-icon::after{
+  content: '';
+  display: block;
+  width: 0px;
+  height: 2px;
+  background: #000;
+  transition: width .3s ease;
+}
+
+.front-icon:hover::after{
+  width: 100%;
+  transition: width .3s;
+}
+
+/*------------------------------------------- PROFILE CARD  ----------------------------------------------*/
 
 #Team{
     background: #fff;
@@ -301,7 +330,43 @@ section{
             color: #6e5494;
           }
 
-/* FOOTER SECTION */
+      @media (max-width: 767px){
+        .card-header__img{
+          height: 90px;
+          width: 90px;
+        }
+        .card-header__name{
+          margin: 20px;
+          font-size:15px;
+        }
+        .card{
+          height: 105vh;
+        }
+        .title{
+          font-size: 18px;
+        }
+      }
+      @media (max-width: 281px){
+        .card-header__img{
+          height: 70px;
+          width: 70px;
+        }
+        .card-header__name{
+          margin: 35px 10px;
+          font-size:12px;
+        }
+        .title{
+          font-size: 25px;
+        }
+        .container .box{
+          margin: 90px 10px;
+        }
+        .title{
+          font-size: 15px;
+        }
+      }
+
+/*------------------------------------------- FOOTER SECTION ----------------------------------------------*/
 
 .site-footer
 {
@@ -313,7 +378,8 @@ section{
 .site-footer hr
 {
   border-top-color:#bbb;
-  opacity:0.5
+  width: 100%;
+  opacity:0.5;
 }
 .site-footer hr.small
 {
@@ -376,13 +442,7 @@ section{
 {
   margin:0
 }
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30px
-  }
-}
+
 @media (max-width:767px)
 {
   .site-footer
