--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -1,178 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Doctors</title>
-  <link rel="stylesheet" href="../static/css/styled.css">
-  <link rel="icon" href="../static/icons/favicon-32x32.png">
 
+<head>
+  <meta charset="UTF-8">
+  <title>Doctors</title>
+  <link rel="stylesheet" href="../static/css/styled.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../static/icons/favicon-32x32.png">
 </head>
 
 <body>
 
-<header id="header">
-        <h1 class="title" style="align-items: center; color: white;">SWASTH AIO</h1>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-        </ul>
-</header>    
+  <header id="header">
+    <h1 class="title" style="align-items: center; color: white;">SWASTH AIO</h1>
+    <h1 id="Heading">Find Doctors</h1>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+    </ul>
+  </header>
 
-<div class="wrapper">
-  <div class="header">
-    <div class="title">
-      Find Doctors
-    </div>
-
+  <div class="wrapper">
     <div class="search_box">
       <input type="text" id="search_input" placeholder="Search Speciality">
     </div>
   </div>
 
-  <div class="table_wrap">
-    <div class="table_header">
-      <ul>
-        <li>
-          <div class="item">
-            <div class="name">
-              <span>NAME</span>
-            </div>
-            <div class="exp">
-              <span>EXPERIENCE</span>
-            </div>
-            <div class="phone">
-                <span>PHONE NO.</span>
-              </div>
-            <div class="issue">
-              <span>SPECIALITY</span>
-            </div>
-            <div class="issue">
-                <span>CONSULTATION</span>
-            </div>
-            <div class="status">
-              <span>AVAILABILITY</span>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <div class="table_body">
-      <ul>
-        <li>
-          <div class="item">
-            <div class="name">
-              <span>Dr. Praveer Aggarwal</span>
-            </div>
-            <div class="exp">
-              <span>31 years</span>
-            </div>
-            <div class="phone">
-                <span>+91-8071965880</span>
-              </div>
-            <div class="issue">
-              <span>Pediatrician</span>
-            </div>
-            <div class="video">
-                <img src="../static/img/Zoom.png" alt="Zoom" width="100"></img>
-            </div>
-            <div class="status">
-              <span class="closed">Not Available</span>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="item">
-            <div class="name">
-              <span>Dr. Vijay Aggarwal</span>
-            </div>
-            <div class="exp">
-                <span>28 years</span>
-            </div>
-            <div class="phone">
-              <span>+91-11-40848612</span>
-            </div>
-            <div class="issue">
-              <span>ENT</span>
-            </div>
-            <div class="video">
-                <img src="../static/img/Zoom.png" alt="Zoom" width="100"></img>
-            </div>
-            <div class="status">
-              <span class="open">Available</span>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="item">
-            <div class="name">
-              <span>Dr. Amrita Gogia</span>
-            </div>
-            <div class="exp">
-                <span>15 years</span>
-            </div>
-            <div class="phone">
-              <span>+91-11-40849413</span>
-            </div>
-            <div class="issue">
-              <span>Dentist</span>
-            </div>
-            <div class="video">
-                <img src="../static/img/Zoom.png" alt="Zoom" width="100"></img>
-            </div>
-            <div class="status">
-                <span class="open">Available</span>
-              </div>
-          </div>
-        </li>
-        <li>
-          <div class="item">
-            <div class="name">
-              <span>Dr. Shalini Chawla Khanna</span>
-            </div>
-            <div class="exp">
-                <span>21 years</span>
-            </div>
-            <div class="phone">
-              <span>+91-9810401471</span>
-            </div>
-            <div class="issue">
-              <span>Gynaecologist</span>
-            </div>
-            <div class="video">
-                <img src="../static/img/Zoom.png" alt="Zoom" width="100"></img>
-            </div>
-            <div class="status">
-              <span class="open">Available</span>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="item">
-            <div class="name">
-              <span>Dr. Jyoti Gupta</span>
-            </div>
-            <div class="exp">
-                <span>10 years</span>
-            </div>
-            <div class="phone">
-              <span>+91-11-41172129</span>
-            </div>
-            <div class="issue">
-              <span>Dermatologist</span>
-            </div>
-            <div class="video">
-                <img src="../static/img/Zoom.png" alt="Zoom" width="100"></img>
-            </div>
-            <div class="status">
-              <span class="hold">Unknown</span>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
+  <table>
+    <thead>
+      <tr>
+        <th scope="col">NAME</th>
+        <th scope="col">EXPERIENCE</th>
+        <th scope="col">PHONE NO.</th>
+        <th scope="col" class="issue">SPECIALITY</th>
+        <th scope="col">CONSULTATION</th>
+        <th scope="col">AVAILABILITY</th>
+      </tr>
+    </thead>
+    <tbody class="table_body">
+      <tr>
+        <td data-label="NAME">Dr. Praveer Aggarwal</td>
+        <td data-label="EXPERIENCE">31 years</td>
+        <td data-label="PHONE NO.">+91-8071965880</td>
+        <td data-label="SPECIALITY" class="issue"><span>Pediatrician</span></td>
+        <td data-label="CONSULTATION"><img src="../static/img/Zoom.png" alt="Zoom" width="100"></img></td>
+        <td data-label="AVAILABILITY" class="closed">Not Available</td>
+      </tr>
+      <tr>
+        <td data-label="NAME">Dr. Vijay Aggarwal</td>
+        <td data-label="EXPERIENCE">28 years</td>
+        <td data-label="PHONE NO.">+91-11-40848612</td>
+        <td data-label="SPECIALITY" class="issue"><span>ENT</span></td>
+        <td data-label="CONSULTATION"><img src="../static/img/Zoom.png" alt="Zoom" width="100"></img></td>
+        <td data-label="AVAILABILITY" class="open">Available</td>
+      </tr>
+      <tr>
+        <td data-label="NAME">Dr. Amrita Gogia</td>
+        <td data-label="EXPERIENCE">15 years</td>
+        <td data-label="PHONE NO.">+91-11-40849413</td>
+        <td data-label="SPECIALITY" class="issue"><span>Dentist</span></td>
+        <td data-label="CONSULTATION"><img src="../static/img/Zoom.png" alt="Zoom" width="100"></img></td>
+        <td data-label="AVAILABILITY" class="open">Available</td>
+      </tr>
+      <tr>
+        <td data-label="NAME">Dr. Shalini Chawla Khanna</td>
+        <td data-label="EXPERIENCE">21 years</td>
+        <td data-label="PHONE NO.">+91-9810401471</td>
+        <td data-label="SPECIALITY" class="issue"><span>Gynaecologist</span></td>
+        <td data-label="CONSULTATION"><img src="../static/img/Zoom.png" alt="Zoom" width="100"></img></td>
+        <td data-label="AVAILABILITY" class="open">Available</td>
+      </tr>
+      <tr>
+        <td data-label="NAME">Dr. Jyoti Gupta</td>
+        <td data-label="EXPERIENCE">10 years</td>
+        <td data-label="PHONE NO.">+91-11-41172129</td>
+        <td data-label="SPECIALITY" class="issue"><span>Dermatologist</span></td>
+        <td data-label="CONSULTATION"><img src="../static/img/Zoom.png" alt="Zoom" width="100"></img></td>
+        <td data-label="AVAILABILITY" class="hold">Unknown</td>
+      </tr>
+    </tbody>
+  </table>
 
-<script src="../static/js/script.js"></script>
+  <script src="../static/js/script.js"></script>
 
-</div>
 </body>
+
 </html>
